.happypack/s--16452577
SyntaxError: Unexpected token (79:66)

[0m [90m 77 | [39m										name[33m=[39m[32m"SignUp"[39m 
 [90m 78 | [39m										value[33m=[39m[32m"Sign Up"[39m 
[31m[1m>[22m[39m[90m 79 | [39m										className[33m=[39m{isEnabled[33m==[39m[36mtrue[39m[33m?[39m[32m"submit_button"[39m[33m:[39m[32m"IMDisabled"[39m}[32m"submit_button"[39m
 [90m    | [39m										                                                        [31m[1m^[22m[39m
 [90m 80 | [39m										disabled[33m=[39m{[33m![39misEnabled}[33m/[39m[33m>[39m
 [90m 81 | [39m								[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 82 | [39m							[33m<[39m[33m/[39m[33mform[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (79:66)

[0m [90m 77 | [39m										name[33m=[39m[32m"SignUp"[39m 
 [90m 78 | [39m										value[33m=[39m[32m"Sign Up"[39m 
[31m[1m>[22m[39m[90m 79 | [39m										className[33m=[39m{isEnabled[33m==[39m[36mtrue[39m[33m?[39m[32m"submit_button"[39m[33m:[39m[32m"IMDisabled"[39m}[32m"submit_button"[39m
 [90m    | [39m										                                                        [31m[1m^[22m[39m
 [90m 80 | [39m										disabled[33m=[39m{[33m![39misEnabled}[33m/[39m[33m>[39m
 [90m 81 | [39m								[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 82 | [39m							[33m<[39m[33m/[39m[33mform[39m[33m>[39m[0m

    at transpile (/home/spineor/risorso/node_modules/babel-loader/lib/index.js:64:13)
    at Object.module.exports (/home/spineor/risorso/node_modules/babel-loader/lib/index.js:174:20)
    at applySyncOrAsync (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/spineor/risorso/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/spineor/risorso/node_modules/loader-runner/lib/LoaderRunner.js:119:14)